Edit render yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: verdex
+  - name: mysite
     databaseName: mysite
     user: mysite
     plan: free
@@ -10,7 +10,6 @@ services:
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
-    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
     startCommand: "bundle exec rails server"
     envVars:
       - key: DATABASE_URL
